# docassemble-MATCFinancialStatement

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
docassemble/MAFinancialStatement/data/questions/: financial_statement.yml  financial_statement_schedule_b.yml  financial_statement_short.yml
docassemble/MAFinancialStatement/data/sources/: README.md
docassemble/MAFinancialStatement/data/templates/: README.md
docassemble/MATCFinancialStatement/: financial_statement_helpers.py
docassemble/MATCFinancialStatement/data/questions/: financial_statement.yml  financial_statement_long.yml  financial_statement_schedule_a.yml  financial_statement_schedule_b.yml  financial_statement_shared.yml  financial_statement_short.yml  ma1a_portable_schema.yml  main.yml  main_financial_statement.yml
