[build-system]
requires = [
    "setuptools==80.9.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "docassemble.MATCFinancialStatement"
version = "1.48"
description = "A docassemble interview for Massachusetts financial statement forms."
readme = "README.md"
authors = [
    { name = "Court Forms Online", email = "litlab@suffolk.edu" },
]
dependencies = [
    "docassemble.ALMassachusetts>=0.1.2",
    "docassemble.AssemblyLine @ git+https://github.com/SuffolkLITLab/docassemble-AssemblyLine.git@main",
    "docassemble.MassAccess @ git+https://github.com/SuffolkLITLab/docassemble-MassAccess.git@main",
    "docassemble.ALToolbox @ git+https://github.com/SuffolkLITLab/docassemble-ALToolbox.git@main",
]
license = "MIT"
license-files = [
    "LICENSE",
]

[project.urls]
Homepage = "https://courtformsonline.org"

[tool.setuptools.packages.find]
where = [
    ".",
]
include = [
    "docassemble*",
]
